--- a/Pou/MainPage.xaml
+++ b/Pou/MainPage.xaml
@@ -9,9 +9,9 @@
     <RowDefinition Height="*"/>
     <RowDefinition Height="*"/>
     <RowDefinition Height="*"/>
-    <Grid.RowDefinitions>
+    </Grid.RowDefinitions>
 
-    <image
-          Source="cachorro.png"
+    <Image Source="cachorro.png"/>
+</Grid>
 
 </ContentPage>
