--- a/Pou/MainPage.xaml
+++ b/Pou/MainPage.xaml
@@ -6,12 +6,19 @@
     <Grid>
 <Grid.RowDefinitions>
     <RowDefinition Height="*"/>
-    <RowDefinition Height="*"/>
-    <RowDefinition Height="*"/>
-    <RowDefinition Height="*"/>
+    <RowDefinition Height="70"/>
+    <RowDefinition Height="70"/>
+    <RowDefinition Height="70"/>
     </Grid.RowDefinitions>
 
-    <Image Source="cachorro.png"/>
-</Grid>
+    <Image Source="cachorro.png"
+    Aspect="AspectFill"
+    Grid.RowSpan="3"/>
+
+    </Grid>
+
+
+
+
 
 </ContentPage>
