--- a/Pou/MainPage.xaml
+++ b/Pou/MainPage.xaml
@@ -1,19 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Pou.MainPage">
-
+             x:Class="Pou.MainPage"
+             Shell.NavBarIsVisible="false">
     <Grid>
 <Grid.RowDefinitions>
     <RowDefinition Height="*"/>
     <RowDefinition Height="70"/>
     <RowDefinition Height="70"/>
-    <RowDefinition Height="70"/>
     </Grid.RowDefinitions>
 
-    <Image Source="cachorro.png"
+    <Image Source="planodefundonovo.jpg"
     Aspect="AspectFill"
     Grid.RowSpan="3"/>
+
+    <Image Source="cachorro.png"
+           Aspect="AspectFill"
+           WidthRequest="500"
+           HeightRequest="500"
+           Grid.RowSpan="3"/>
+     
+
 
     </Grid>
 
