arrumando coluna linhas 05/04

--- a/Pou/MainPage.xaml
+++ b/Pou/MainPage.xaml
@@ -6,24 +6,42 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="70"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="400"/>
         </Grid.RowDefinitions>
-
         <Grid.ColumnDefinitions>
-        <ColumnDefinitions Width="*"
-        <
-
+        <ColumnDefinition Width="*"/>
+        <ColumnDefinition Width="*"/>
+        <ColumnDefinition Width="*"/>
+        <ColumnDefinition Width="40"/>
+        </Grid.ColumnDefinitions>
 
         <Image Source="planodefundonovo.jpg"
             Aspect="AspectFill"
-            Grid.RowSpan="3"/>
+            Grid.Column="0"
+            Grid.ColumnSpan="4"
+            Grid.RowSpan="10"
+            Grid.Row="0"/>
 
         <Image Source="cachorro.png"
                 Aspect="AspectFill"
                 HeightRequest="500"
-                Grid.RowSpan="3"/>
+                Grid.Row="9"
+                Grid.RowSpan="9"
+                Grid.ColumnSpan="4" />
+    
            
+    <ProgressBar x:Name="botãofome"
+                 Grid.Row="2"
+                 Grid.Column="1"
+                 Grid.ColumnSpan="3"/>
+
         
     </Grid>
 
